prepare to accept loext:contextual-spacing, fdo#58112

Change-Id: I58e151743bf910b8b51f1b453e0bfcb4ed767d9d
(cherry picked from commit ef5e7b69440baa9f222d1ec870668d31d08268f0)
Reviewed-on: https://gerrit.libreoffice.org/7151
Reviewed-by: Miklos Vajna <vmiklos@collabora.co.uk>
Tested-by: Miklos Vajna <vmiklos@collabora.co.uk>